--- a/HTML/game.html
+++ b/HTML/game.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main>
-    <div id="test">Test</div>
+    <div id="test">
+      <p>Assets to Alocate:</p>
+      <p>1000</p>
+    </div>
     <div class="board-holder"></div>
   </main>
 
