third update - pre-obj orient

--- a/HTML/game.html
+++ b/HTML/game.html
@@ -10,7 +10,7 @@
   <main>
     <div id="test">
       <p>Assets to Alocate:</p>
-      <p>1000</p>
+      <p id="assetCount">1000</p>
     </div>
     <div class="board-holder"></div>
   </main>
