--- a/HTML/game.html
+++ b/HTML/game.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <div id="test">
-      <p>Assets to Alocate:</p>
+      <p id="assetTitle">Assets to Alocate:</p>
       <p id="assetCount">1000</p>
     </div>
     <div class="board-holder"></div>
